k8s/istio-web-app.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: web-app
spec:
  mtls:
    mode: STRICT # Enforces mTLS for all services in the namespace
